--- a/zed-settings.json
+++ b/zed-settings.json
@@ -36,5 +36,21 @@
     "code_actions": false,
     "breadcrumbs": false
   },
+  "diagnostics": {
+    "button": false,
+    "include_warnings": true,
+    "lsp_pull_diagnostics": {
+      "enabled": true,
+      "debounce_ms": 50
+    },
+    "inline": {
+      "enabled": true,
+      "update_debounce_ms": 150,
+      "padding": 4,
+      "min_column": 0,
+      "max_severity": null
+    },
+    "cargo": null
+  },
   "inline_code_actions": true
 }
